# gig-playlists

./: .gitignore  README.md  openapi.yaml  package.json  pyproject.toml  pytest.ini  samconfig.toml  template-refactored.yaml  template.yaml
.github/workflows/: deploy.yml  dev-ci.yml  lint-and-test.yml  lint.yml  unit-test.yml
frontend/: angular.json  package-lock.json  package.json  tsconfig.json
frontend/src/: main.ts
frontend/src/app/: app.component.css  app.component.html  app.component.ts  app.config.ts  app.routes.ts  config-dev.ts  config-local.ts  config-prod.ts  gig.service.ts  gig.ts
frontend/src/environments/: environment.dev.ts  environment.local.ts  environment.prod.ts
functions/add_gig_to_upcoming_playlist/: app.py
functions/frontend_auth/: app.js
functions/gigs_db_auth/: app.py
functions/gigs_db_crud/: app.py
functions/remove_gig_from_upcoming_playlist/: app.py
functions/upcoming_playlist_recon/: app.py
infra/: samconfig.toml  template-refactored.yaml  template.yaml
infra/scripts/: populate-sam-template.py
infra/shared/: samconfig.toml  shared-infra.yaml
libs/gigs_db/: gigs_db_service.py
libs/python/: gigs_db_service.py
libs/python/gigs_db/: gigs_db_service.py
libs/python/upcoming_playlist/: upcoming_playlist_recon_service.py
libs/spotify/: spotify_playlist_client.py
libs/tests/: test_gigs_db_service.py  test_upcoming_playlist_recon_service.py
libs/upcoming_playlist/: upcoming_playlist_client.py  upcoming_playlist_recon_service.py
tests/integration/: test_upcoming_playlist_dynamo_flow.py
(+54 files in other folders)
