[project]
name = "gig-playlists"
version = "v1"
requires-python = "==3.12.*"
dependencies = [
  "aws-lambda-powertools[all]>=3.8",
  "boto3>=1.37.0",
  "botocore>=1.37.0",
  "spotipy>=2.25.0",
  "pydantic>=2.0.0",
]

[dependency-groups]
dev = [
  "pre-commit>=4.3.0",
  "pytest>=8.3.5",
  "ruff>=0.12.10",
]
